planapp/appstyle.css
/* ... */
.nav-container .hamburger-lines .line1 {
  transform-origin: 0% 0%;
  transition: transform 0.4s ease-in-out;
}

.nav-container .hamburger-lines .line2 {
  transition: transform 0.2s ease-in-out;
}

.nav-container .hamburger-lines .line3 {
  transform-origin: 0% 100%;
  transition: transform 0.4s ease-in-out;
}

.menu-items {
  position: fixed;
  padding-top: 20vh;
  background-color: var(--color-light-grey);
  height: 100vh;
  width: 100vw;
  top:0;
  left: 0;
  transform: translate(-110vw);
  transform: translateZ(90);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  transition: transform 0.4s ease-in-out;
  overflow: hidden;
}

.menu-items li {
  margin-bottom: 2.2rem;
}

.loginbutton{
  background-color: var(--color-pink-2);
  color: var(--color-white);
  padding: 10px 13px 10px 15px;
  text-decoration: none;
  border-radius: 10px;
  margin-right: 10px;
  white-space: nowrap;
}

.loginbutton:hover{
  background-color: var(--color-pink-1);
  color: var(--color-white);
}

.signupbutton{
  background-color: var(--color-red-2);
  color: var(--color-white);
  padding: 10px 13px 10px 15px;
  text-decoration: none;
  border-radius: 50px;
  white-space: nowrap;
}

.signupbutton:hover{
  background-color: var(--color-red-4);
}

.menu-items li {
  .loginbutton{
      margin-right:auto;
  }
  .signupbutton{
      margin-left:auto;
  }
}

.nav-container input[type="checkbox"]:checked ~ .menu-items {
  transform: translate(-10vw);
}
nav.static:has(.nav-container:has(input[type="checkbox"]:checked)) ~ .container {
  opacity: 0 !important;
}
.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
  transform: rotate(45deg);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
  transform: scaleY(0);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
  transform: rotate(-45deg);
}

h1 {
  font-family: 'Julius Sans One', sans-serif;
  font-size: xx-large;
  color: var(--color-black-1);
  text-align: center;
  strong{
      color: var(--color-red-1);
  }
}

